feat: update database configuration to use MongoDB and add Prisma service

--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,4 @@
 PORT=3333
 
 # Prisma
-DATABASE_URL="postgresql://[USERNAME]:[PASSWORD]@[HOST]:[PORT]/[DATABASE]"
+DATABASE_URL="mongodb://[USERNAME]:[PASSWORD]@[HOST]:27017/[DATABASE]?authSource=admin"
